--- a/style.css
+++ b/style.css
@@ -1,3 +1,44 @@
+html {
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+html,
+body {
+  font-family: "Superstudio Trial", monospace;
+}
+
 * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -17,9 +58,11 @@
 }
 
 #container {
-  position: relative;
+  position: fixed;
+  top: 50%;
+  left: 50%;
   transform-style: preserve-3d;
-  transform: rotateX(0deg) rotateY(0deg);
+  transform: rotateX(0deg) rotateY(0deg) translate(-50%, -50%);
   transform-origin: center center;
   width: 100vw;
   height: 100vh;
@@ -30,6 +73,8 @@
   position: absolute;
   font-family: "Superstudio Trial", monospace;
   background: #ccc;
+  transform-origin: center center;
+  transform-style: preserve-3d;
 }
 
 .box .label {
@@ -82,4 +127,18 @@
 
 .logo svg {
   width: 55vw;
+}
+
+.contact-btn {
+  background: #000;
+  position: fixed;
+  left: 50%;
+  bottom: 1rem;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  border-radius: 50px;
+  padding: 1.5rem 2rem;
+  color: white;
+  text-decoration: none;
+  font-size: 15px;
 }
